# 3x

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  log.txt  log2.txt  log3.txt  main  main.c  main.py
executable/: main  visualizer
util/: factorial.c  factorial.h
visualizer/: Makefile  visualizer.c
